--- a/pokemon-app/package.json
+++ b/pokemon-app/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "format:fix": "prettier --write .",
     "preview": "vite preview",
-    "prepare": "cd .. && husky pokemon-app/_/.husky"
+    "prepare": "cd .. && husky pokemon-app/.husky"
   },
   "dependencies": {
     "react": "^18.3.1",
