--- a/pokemon-app/package.json
+++ b/pokemon-app/package.json
@@ -12,6 +12,9 @@
     "prepare": "cd .. && husky pokemon-app/.husky"
   },
   "dependencies": {
+    "axios": "^1.7.2",
+    "axios-cache-interceptor": "^1.5.3",
+    "pokenode-ts": "^1.20.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
